--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #4070f4;
+}
+    </style>
 </head>
-<body style="background-color: rgb(35, 245, 245); text-align: center; font-family: 'Poppins', sans-serif; color: rgba(17, 23, 26, 0.864);">
-  
-<h1>Welcome to your Dashboard</h1>
-  <% allUsers.forEach((user) => { %>
-        <h1><%= user.firstName %> <%= user.lastName %> </h1>
-    <% }) %>
-        </body>  
+<body>
+    <% allUsers.map((users)=>{ %>
+        <h1>Welcome <%= users.username %></h1> <br>
+        <!-- <h1><%= users.email %></h1>     -->
+   <%  }) %>
+</body>
 </html>
