--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-       <style>
+     <style>
      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
@@ -101,53 +101,25 @@ form .text h3 a:hover{
   text-decoration: underline;
 }
 </style>
-  </head>
-  <body>
-    <div class="wrapper">
-      <h2>Registration</h2>
-      <form action="/login" method="POST">
-        <div class="input-box">
-          <input type="text" id="name" placeholder="Enter your name" required name="username" />
-        </div>
-        <div class="input-box">
-          <input
-            type="text"
-            id="email"
-            placeholder="Enter your email"
-            required
-            autocomplete="new-email"
-            name="email"
-          />
-        </div>
-        <div class="input-box">
-          <input
-            type="password"
-            id="password"
-            placeholder="Create password"
-            required
-            name="password"
-          />
-        </div>
-        <div class="input-box">
-          <input
-            type="password"
-            id="confirmPassword"
-            placeholder="Confirm password"
-            required
-            name="confirmPassword"
-          />
-        </div>
-        <div class="policy">
-          <input type="checkbox" />
-          <h3>I accept all terms & condition</h3>
-        </div>
-        <div class="input-box button">
-          <input type="Submit" id="register" value="Register Now" />
-        </div>
-        <div class="text">
-          <h3>Already have an account? <a href="/login">Login now</a></h3>
-        </div>
-      </form>
-    </div>
-  </body>
+</head>
+<body>
+     <div class="wrapper">
+    <h2>Sign In</h2>
+    <form action="/dashboard" method="POST">
+     
+      <div class="input-box">
+        <input type="text" name="email" id="email" placeholder="Enter your email" required>
+      </div>
+      <div class="input-box">
+        <input type="password" name="password" id="password" placeholder="Input password" required>
+      </div>
+      <div class="input-box button">
+        <input type="Submit" id="login" value="Login Now">
+      </div>
+      <div class="text">
+        <h3>Don't have an account? <a href="/signup">Sign up now</a></h3>
+      </div>
+    </form>
+  </div>
+</body>
 </html>
